[tool.poetry]
name = "stochastic-system-engine"
version = "0.1.0"
description = "Stochastic modeling and pricing engine for financial systems"
authors = ["Matteo Trapasso"]
license = "MIT"
readme = "README.md"
packages = [{ include = "stochastic_systems_engine", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0"
pandas = "^2.2"
yfinance = "^0.2"
scipy = "^1.13"
matplotlib = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"